Update quote for clarity and wording improvements

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                     <div>
                         <i class="fas fa-quote-left text-3xl mb-4 text-nu-purple-400"></i>
                         <blockquote class="text-lg text-gray-300 italic">
-                            "A game-changer for our workflow. They brought clarity to a very messy situation and delivered a product that was robust, clean, and exactly what we needed, ahead of schedule."
+                            "A game-changer for our workflow. They brought clarity to a very messy situation and delivered solutions that was smart, clean and robust, ahead of schedule."
                         </blockquote>
                     </div>
                     <div class="mt-6 flex items-center">
